# M8AX_MegaPi

./: readme.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/m8axchess/: m8axchess.html
app/src/main/assets/m8axpong/: m8axpong.html
app/src/main/cpp/: CMakeLists.txt  gmp.h  m8axpi.c  native-lib.cpp
app/src/main/java/com/m8ax_megapi/: AstronomiaActivity.kt  ChessActivity.kt  MainActivity.kt  NotasActivity.kt  NotasAdapter.kt  SombraLunarView.kt  SplashActivity.kt  TetrisActivity.kt  ThePong.kt
app/src/main/res/layout/: activity_astronomia.xml  activity_chess.xml  activity_main.xml  activity_notas.xml  activity_splash.xml  activity_tetris.xml  item_notas.xml
app/src/main/res/menu/: main_menu.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: file_paths.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
